# land-information

./: .env.sample  .gitignore  README.md  hello.py  land_info.db  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_land-infomation-2.yml  main_land-information.yml
app/: __init__.py  crypto.py  database.py  main.py  models.py  schemas.py  seed.py  utils.py
app/services/: easymap.py  etax.py  luz.py  mortgage.py  pdf_analysis.py
static/: index.html
