[project]
name = "land-iformation-backend"
version = "0.1.0"
description = "Land information backend (FastAPI + SQLite)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.12",
    "requests>=2.34.2",
    "beautifulsoup4>=4.12.0",
    "xlrd==1.2.0",
    "numpy>=2.4.6",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
]
